tests/errors/required_slot_no_value.dang
# Test that required slots without values are runtime errors

# This should fail at runtime - can't have a required type without a value
let foo: String!

print("Should not reach here!")
